# local-ticker-wallet

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  progress.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-apt.yml  publish-crates-io.yml  release-drafter.yml  release.yml  sync-labels.yml  validate-tag.yml
docs/: architecture.md  features.md  installation.md  releasing.md
docs/bug-reports/: README.md
docs/qa/: README.md
docs/qa/issues/: 01-search-field-swallows-navigation-keys.md  02-q-key-quits-app-inside-modals.md  03-tables-no-vertical-scrolling.md  04-search-preview-stuck-loading-on-error.md  05-sort-by-score-toggle-not-reversible.md  06-negative-zero-number-formatting.md  07-footer-help-in-title-and-unused-currency-column.md
docs/superpowers/plans/: 2026-06-21-local-ticker-wallet.md  2026-06-22-tui-roadmap-i18n.md
docs/superpowers/specs/: 2026-06-21-local-ticker-wallet-design.md
packaging/: build-apt-repo.sh  build-debs.sh  install-apt.sh  nfpm.yaml
src/: client.rs  config.rs  lib.rs  main.rs  paths.rs  portfolio.rs
src/core/: format.rs  mod.rs  pnl.rs  score.rs  signals.rs  types.rs
src/daemon/: market_hours.rs  mod.rs  poller.rs  recompute.rs  server.rs
src/i18n/: en.rs  mod.rs  pt_br.rs
src/ipc/: mod.rs
src/providers/: brapi.rs  mod.rs  yahoo.rs
src/storage/: db.rs  mod.rs  queries.rs  schema.rs
src/tui/: app.rs  client.rs  input.rs  mod.rs  models.rs  state.rs  views.rs
src/tui/overlays/: add_transaction.rs  confirm_delete.rs  mod.rs
src/tui/screens/: detail.rs  ledger.rs  mod.rs  portfolio.rs  search.rs
src/tui/widgets/: braille_chart.rs  mod.rs  status_bar.rs
tests/: daemon_ipc.rs  e2e.rs
tests/fixtures/: brapi_quote_petr4.json  yahoo_chart_petr4.json
