[package]
name = "local-ticker-wallet"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "ltw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "process", "signal"] }
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
directories = "5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
