[package]
name = "ltw"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Local TUI stock wallet for B3 assets"
readme = "README.md"
license = "MIT"
repository = "https://github.com/carvalhosauro/local-ticker-wallet"
homepage = "https://github.com/carvalhosauro/local-ticker-wallet"
keywords = ["stocks", "portfolio", "tui", "b3", "finance", "cli"]
categories = ["command-line-utilities", "finance"]
authors = ["carvalhosauro"]

[package.metadata.release]
# crates.io is published by CI on tag push — avoid double publish
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "chore(release): ltw {{version}}"

[lib]
name = "local_ticker_wallet"
path = "src/lib.rs"

[[bin]]
name = "ltw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "process", "signal"] }
ratatui = "0.28"
crossterm = "0.28"
rusqlite = { version = "0.40", features = ["bundled", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
directories = "5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "carvalhosauro/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew", "./publish-crates-io", "./publish-apt"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether dist should create a Github Release or use an existing draft
create-release = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
gcc-aarch64-linux-gnu = "*"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
